RESOLVED FIXED190166
[Mac] The UIProcess should listen to memory pressure signals
https://bugs.webkit.org/show_bug.cgi?id=190166
Summary [Mac] The UIProcess should listen to memory pressure signals
Chris Dumez
Reported 2018-10-01 14:41:14 PDT
The UIProcess should listen to memory pressure signals in order to free memory, similarly to what we already do on iOS.
Attachments
Patch (18.00 KB, patch)
2018-10-01 14:42 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-10-01 14:42:42 PDT
Chris Dumez
Comment 2 2018-10-01 16:46:57 PDT
Comment on attachment 351303 [details] Patch Clearing flags on attachment: 351303 Committed r236700: <https://trac.webkit.org/changeset/236700>
Chris Dumez
Comment 3 2018-10-01 16:46:59 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-10-01 16:47:25 PDT
Note You need to log in before you can comment on or make changes to this bug.